feat(all): 使用 force 修改 compilerc 去除 .json 就有效了 ,但是官方文档里说是加 json有效?

--- a/src/index.html
+++ b/src/index.html
@@ -11,28 +11,31 @@
 <div id="app">
     this is app element
 </div>
+</body>
+<!--<script type="text/jsx">-->
+<!--import React from 'react';-->
+<!--import ReactDOM from 'react-dom';-->
+<!--import {AppContainer} from 'react-hot-loader';-->
 
+<!--// 运行正常-->
+<!--import MyApp from './index'-->
+<!--ReactDOM.render(<div>{MyApp}</div>, document.getElementById('app'));-->
+<!--</script>-->
 
-<script type="text/tsx">
-  import * as React from 'react';
-  import * as ReactDOM from 'react-dom';
-  import {
-    AppContainer
-  } from 'react-hot-loader';
-  import MyApp from './index'
-  console.log('render  run')
-  console.log(MyApp)
-  // jsx 问题
-  const render = () => {
-    // NB: We have to re-require MyApp every time or else this won't work
-    // We also need to wrap our app in the AppContainer class
-    ReactDOM.render(<div><AppContainer>{MyApp}</AppContainer></div>, document.getElementById('app'));
-  }
-
-  render();
-  if (module.hot) {
-    module.hot.accept(render);
-  }
+<script >
+  require('./index.tsx')
 </script>
 
+
+<!--<script type="text/tsx">-->
+  <!--import * as React from 'react';-->
+  <!--import * as ReactDOM from 'react-dom';-->
+  <!--// import {AppContainer} from 'react-hot-loader';-->
+
+  <!--console.log('render  run')-->
+  <!--// jsx 问题-->
+  <!--const render = () => {-->
+    <!--ReactDOM.render(<div>{"test app index"}</div>, document.getElementById('app'));-->
+  <!--}-->
+<!--</script>-->
 </html>
