feat(location): 后续使用 radium 写 css

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>snippet tool</title>
+    <link rel="stylesheet" type="text/css" href="./index.css" >
 </head>
 <body>
-<h1>Hello World!</h1>
-
-
 <div id="app">
     this is app element
 </div>
