refactor(location): 配置待修改

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>snippet tool</title>
+    <link rel="stylesheet" href="../src/app.less">
 </head>
 <body>
 <div id="app">
     this is app element
 </div>
+<script>
+  require('../src/index.tsx')
+</script>
 </body>
 </html>
