--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>snippet tool</title>
-    <link rel="stylesheet" href="../src/app.less">
+    <link rel="stylesheet" type="text/css" href="./index.css" >
 </head>
 <body>
 <div id="app">
     this is app element
 </div>
-<script>
-  require('../src/index.tsx')
-</script>
 </body>
+<script>
+  require('./index.tsx')
+</script>
 </html>
