--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>snippet tool</title>
-    <link rel="stylesheet" type="text/css" href="./index.css" >
+    <link rel="stylesheet" type="text/css" href="./main.css" >
 </head>
 <body>
 <div id="app">
