refactor(*): 使用 @electron-forge ,但是配置错误 待修改

--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="UTF-8">
-    <title>snippet tool</title>
-    <link rel="stylesheet" type="text/css" href="./main.css" >
-    <link rel="stylesheet" type="text/css" href="./css/codemirror.css" >
-    <link rel="stylesheet" type="text/css" href="./css/3024-day.css" >
-    <link rel="stylesheet" type="text/css" href="./css/show-hint.css" >
-</head>
-<body>
-<div id="app">
-    this is app element
-</div>
-</body>
-<script>
-  require('./index.tsx')
-</script>
+    <title>Hello World!</title>
+
+  </head>
+  <body>
+    <h1>💖 Hello World!</h1>
+    <p>Welcome to your Electron application.</p>
+  </body>
 </html>
